fix(footer): fix footer alignment
See title.

--- a/css/global.css
+++ b/css/global.css
@@ -579,6 +579,7 @@ footer {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(3 auto);
     width: 90vw;
+    align-items: center;
   }
 
   .footer_logo {
@@ -587,6 +588,7 @@ footer {
     width: 10vw;
     margin-top: 50%;
     margin-bottom: 50%;
+    margin-left: 10%;
   }
 
   .footer_text {
@@ -599,6 +601,7 @@ footer {
     grid-row: 1 / span 3;
     width: 40vw;
     margin: auto 5vw;
+    align-items: center;
   }
 
   .footer_input {
